Modernize backend for Java 25 idioms